# griels-quest

./: .gitignore  CMakeLists.txt  Makefile  ProjectHome.md  README  README.md  griels.desktop  makefile
.github/workflows/: ci.yml
cmake/: misc.cmake  shell.html.in  uninstall.cmake.in
data/: rounds.txt
src/: array.h  common.h  ending.c  ending.h  game.c  game.h  griel  hero.c  hero.h  history.c  history.h  hud.c  hud.h  intro.c  intro.h  loading.c  loading.h  main.c  main.h  makefile
xcf/: blocks.xcf  passw1.xcf  passw9.xcf  password.xcf
